<resources>
    <string name="app_name">Podar Portal</string>
    <string name="login">Login</string>
    <string name="welcome_text">Welcome!</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="next">Next</string>
    <string name="cancel_text">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jinen Setpal</string>
    <string name="nav_header_subtitle">jinens8@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Event Calendar</string>
    <string name="menu_gallery">Important Announcements</string>
    <string name="menu_slideshow">Attendance Log</string>
    <string name="menu_tools">Edit Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="upload">Upload Profile Picture</string>
    <string name="save">Save</string>
    <string name="update_profile_details">Update Profile Details!</string>
    <string name="name_hint">Your name here…</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="main_welcome_text">Hello, let\'s get learning!</string>
    <string name="notes_text">Notes:</string>
    <string name="note_hint">New note here…</string>
    <string name="your_notes">Your Notes:</string>
    <string name="note_eg">Submit Assignment to Ma\'am by 12noon tomorrow.</string>
    <string name="delete_note">Delete Note</string>
    <string name="new_note">New Note:</string>
    <string name="year_progress">Major Progress This Year: Keep it Up!</string>
    <string name="attendance_percentage">Attendance Percentage</string>
    <string name="because_school_is_cool">Because School is Cool!</string>
    <string name="announcements">Announcements:</string>
    <string name="get_rs_2120_for_question_bank_and_diary_this_monay">Get Rs. 2120 for Question Bank and Diary this Monday</string>
    <string name="ratio">90% Present/10% Absent</string>
    <string name="no_data_entry">No Data Entry</string>
    <string name="log_out">Log Out</string>
    <string name="add_a_note">Add a note!</string>
    <string name="attendance_for_last_five_days">Attendance for Last Five Days</string>
    <string name="no_events_planned">No Events Planned :(</string>
    <string name="events">Events</string>
    <string name="note_deletion_mode">Note Deletion Mode</string>
</resources>
