<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_event_cal"
            android:icon="@drawable/calendar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_announcements"
            android:icon="@drawable/bell"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_admission"
            android:icon="@drawable/book"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_profile_edit"
            android:icon="@drawable/account_card"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_outline_exit_to_app_24px"
            android:title="@string/log_out" />
    </group>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="tle=&quot;@string/menu_slideshow&quot; />&#xA;        &lt;item&#xA;            android:i" />

</menu>
