<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notes">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/notes_text"
            android:textColor="@color/colorPrimary"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/note_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:text="@string/new_note"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/note_edit"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:onClick="saveNote"
                android:text="@string/save"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/note_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/note_hint"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="275dp" />

            <LinearLayout
                android:id="@+id/notes_and_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/note_edit"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/your_notes"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="184dp"
                    tools:layout_editor_absoluteY="201dp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:id="@+id/delete_note_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/delete_note_header"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/note_deletion_mode"
                                android:textColor="@color/colorPrimary"
                                android:textSize="32sp"
                                android:textStyle="bold"
                                android:visibility="gone" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/notes_only"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_toEndOf="@id/checkbox"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">
                        </LinearLayout>
                    </RelativeLayout>
                </ScrollView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/delete_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/delete_note"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/no_note_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/add_a_note"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

</android.support.constraint.ConstraintLayout>